--- a/index.html
+++ b/index.html
@@ -1,20 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first portfulio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="portfulio style/style.css">
 </head>
-<body>
-    <head>
 
-    </head>
+<body class="open">
+
+    <header class="full-x secound-bag">
+        <nav class="subtitle">
+            <h3 class="change">Yea<span class="word-colour">min</span></h3>
+            <ul>
+                <li><a class="dark1" href="">Portfolio</a></li>
+                <li><a class="dark2" href="">Blog</a></li>
+                <li><button class="btnsection">Haire me</button></li>
+            </ul>
+        </nav>
+        <div class="banner-default">
+            <div class="one-time">
+                <h2 class="meaning-1">Hello, I am</h2>
+                <h1 class="crazy-lopenda">Yeamin Paramanik</h1>
+                <p class="description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
+                    because as to society behaved moments.
+                </p>
+                <button class="btnsection">Haire me</button>
+                <button class="btnsection">Contact me</button>
+
+            </div>
+            <img class="imag-cc" src="images/file.png">
+        </div>
+
+    </header>
     <main>
+        <section class="main-content secound-bag">
+            <h3 class="section-title">About Me</h3>
+            <p class="description">I, m a designer & developer with a passion for web design. I enjoy developing simple,
+                clean and slick websites that provide real value to the end user. Thousands of clients have procured
+                exceptional resulfs while working with me. Delivering work within time and budget which meets clients
+                requirements in our mata.
 
+            </p>
+            <div class="about-xb">
+                <div class="about-x2">
+                    <p class="iteam-x5">Name</p>
+                    <p class="iteam-x6">Yeamin</p><br>
+                </div>
+                <div class="about-x2">
+                    <p class="iteam-x5">Email</p>
+                    <p class="iteam-x6">none</p><br>
+                </div>
+                <div class="about-x2">
+                    <p class="iteam-x5">From</p>
+                    <p class="iteam-x6">Bogura</p><br>
+                </div>
+                <div class="about-x2">
+                    <p class="iteam-x5">Date of Birth</p>
+                    <p class="iteam-x6">19-05-2006</p>
+                </div>
+            </div>
+
+        </section>
+        <section class="what-i">
+            <h2 class="what-2 ">What I Do</h2>
+            <p class="t-1 ">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+        </section>
     </main>
     <footer>
-        
+
     </footer>
-    
+
 </body>
+
 </html>
